--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "JavaScript Node.js piglatin translator",
   "main": "pigLatin.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha --compilers js:babel-register"
   },
   "repository": {
     "type": "git",
@@ -22,7 +22,15 @@
   },
   "homepage": "https://github.com/kjng/pig-latin#readme",
   "devDependencies": {
+    "babel-core": "^6.24.0",
+    "babel-preset-es2015": "^6.24.0",
+    "babel-register": "^6.24.0",
     "chai": "^3.5.0",
     "mocha": "^3.2.0"
+  },
+  "babel": {
+    "presets": [
+      "es2015"
+    ]
   }
 }
