--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "JavaScript Node.js piglatin translator",
   "main": "pigLatin.js",
   "scripts": {
+    "start": "babel-node --presets es2015 pigLatin.js",
     "test": "mocha --compilers js:babel-register"
   },
   "repository": {
@@ -22,6 +23,7 @@
   },
   "homepage": "https://github.com/kjng/pig-latin#readme",
   "devDependencies": {
+    "babel-cli": "^6.24.0",
     "babel-core": "^6.24.0",
     "babel-preset-es2015": "^6.24.0",
     "babel-register": "^6.24.0",
